# debabelizer

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo_direct.toml  Cargo_test.toml  Cargo_voice_test.toml  DEBABELIZER_IMPLEMENTATION_GUIDE.md  DEBABELIZER_MIGRATION_ANALYSIS.md  GITHUB_MIGRATION.md  README-RUST.md  README.md  RUST_MIGRATION_GUIDE.md  RUST_MIGRATION_STATUS.md  SONIOX_IMPLEMENTATION_STATUS.md  SONIOX_STREAMING_BUG_ANALYSIS.md  TESTING.md  create_speech_audio.py  create_speech_file.py  debug_audio_size.py  debug_soniox_websocket.py  performance_comparison.py  performance_results.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  simple_soniox_test.py  test_audio_check.py  test_direct_websocket.py  test_fixes.py  test_init.rs  test_logging.py  test_pypi_package.py  test_python_wrapper.py  test_simple_logging.py  test_wait_longer.py
debabelizer/: Cargo.toml
debabelizer-core/: Cargo.toml
debabelizer-core/src/: audio.rs  error.rs  lib.rs  stt.rs  tts.rs
debabelizer-python/: Cargo.toml  Makefile  README.md  UPLOAD_INSTRUCTIONS.md  pyproject.toml
debabelizer-python/examples/: advanced_usage.py  basic_usage.py
debabelizer-python/python/debabelizer/: __init__.py  utils.py
debabelizer-python/src/: lib.rs
debabelizer-python/tests/: test_api_compatibility.py  test_basic.py
debabelizer-utils/: Cargo.toml
debabelizer-utils/src/: audio.rs  lib.rs
debabelizer/examples/: list_providers.rs
debabelizer/src/: config.rs  error.rs  error_tests.rs  lib.rs  performance_tests.rs  processor.rs  providers.rs  session.rs
docs/: UNIFIED_API_DESIGN.md
examples/: README.md  basic_transcription.py  basic_transcription.rs  deepgram_stt_example.rs  full_pipeline.rs  openai_tts_example.rs  streaming_conversation.py  streaming_stt.rs  telephony_integration.py  text_to_speech.py  voice_synthesis.rs
providers/azure/: Cargo.toml
providers/azure/src/: lib.rs
providers/deepgram/: Cargo.toml
providers/deepgram/src/: lib.rs
providers/elevenlabs/: Cargo.toml
providers/elevenlabs/src/: lib.rs
providers/google/: Cargo.toml
providers/google/src/: lib.rs
providers/openai/: Cargo.toml
providers/openai/src/: lib.rs
providers/soniox/: Cargo.toml
providers/soniox/examples/: end_of_stream_test.rs  full_audio_test.rs  simple_voice_test.rs  test_api_key_in_message.rs  test_bearer_auth.rs  test_chunked_streaming.rs  test_debug_connection.rs  test_message_driven.rs  test_single_chunk.rs  test_streaming.rs  voice_streaming_test.rs  websocket_debug.rs
providers/soniox/src/: lib.rs
providers/whisper/: Cargo.toml
providers/whisper/src/: lib.rs
python-legacy/: README.md
python-legacy/debabelizer/core/: processor.py  session.py
python-legacy/debabelizer/providers/base/: stt_provider.py
python-legacy/debabelizer/providers/stt/: __init__.py  deepgram.py  soniox.py  whisper.py
python-legacy/debabelizer/providers/tts/: elevenlabs.py  google.py
src/debabelizer/: __init__.py
src/debabelizer/core/: config.py  processor.py
src/debabelizer/providers/base/: __init__.py  exceptions.py  stt_provider.py  tts_provider.py
src/debabelizer/providers/stt/: __init__.py  azure.py  deepgram.py  google.py  openai_whisper.py  soniox.py  whisper.py
src/debabelizer/providers/tts/: __init__.py  azure.py  openai.py
src/debabelizer/utils/: audio.py  formats.py
test-rust-direct/: Cargo.toml
test-rust-direct/src/: main.rs
tests/: __init__.py  conftest.py  test_background_task_debug.py  test_base_providers.py  test_config.py  test_connection_timing.py  test_debug_messages.py  test_deepgram_stt.py  test_elevenlabs_tts.py  test_explicit_provider.py  test_integration.py  test_message_driven_debug.py  test_module_inspection.py  test_openai_tts.py  test_python_soniox.py  test_rust_config_debug.rs  test_rust_debug.py  test_rust_direct.py  test_rust_direct.rs  test_rust_import.py  test_rust_provider_init.py  test_rust_provider_selection.py  test_rust_simple.py  test_rust_soniox.py  test_rust_soniox_direct.py  test_rust_soniox_streaming.rs  test_rust_streaming_debug.py  test_rust_version.py  test_rust_voice_streaming.rs  test_rust_with_voice.py  test_soniox_audio_streaming.py  test_soniox_batch.py  test_soniox_direct.rs  test_soniox_pingpong.py  test_soniox_speech.py  test_soniox_streaming_debug.py  test_soniox_stt.py  test_soniox_websocket.py  test_soniox_websocket_detailed.py  test_soniox_with_audio.py  (+6 more)
