[package]
name = "debabelizer-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Python bindings for the Debabelizer universal voice processing library"
keywords.workspace = true
categories.workspace = true

[lib]
name = "debabelizer_python"
crate-type = ["cdylib"]

[dependencies]
debabelizer = { path = "../debabelizer", features = ["soniox", "elevenlabs", "openai", "deepgram"] }
debabelizer-core = { path = "../debabelizer-core" }

# PyO3 for Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38", "chrono"] }
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"] }

# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.21"