[package]
name = "debabelizer-python"
version = "0.1.8"
edition = "2021"

[lib]
name = "_internal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
debabelizer = { path = "../debabelizer", features = ["default"] }
debabelizer-core = { path = "../debabelizer-core" }

# Core dependencies only for now
# Provider dependencies would be added when needed

[features]
default = []