[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "debabelizer"
description = "DEPRECATED - This package is no longer maintained. Neither the Python nor Rust implementations are production-ready."
requires-python = ">=3.8"
authors = [
    { name = "Debabelizer Contributors", email = "contributors@debabelizer.com" },
]
keywords = ["speech", "text-to-speech", "speech-to-text", "voice", "audio"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/debabelizer/debabelizer"
Documentation = "https://docs.debabelizer.com"
Repository = "https://github.com/debabelizer/debabelizer.git"
"Bug Tracker" = "https://github.com/debabelizer/debabelizer/issues"

[tool.maturin]
python-source = "python"
module-name = "debabelizer._internal"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"