[package]
name = "debabelizer-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/debabelizer-utils"
description = "Utility functions for the Debabelizer voice processing library"

[dependencies]
debabelizer-core = { path = "../debabelizer-core" }
bytes = { workspace = true }
thiserror = { workspace = true }

# Audio processing
hound = "3.5"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "flac", "wav", "ogg"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.12"