[package]
name = "debabelizer-openai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/debabelizer-openai"
description = "OpenAI provider for Debabelizer voice processing library"
keywords = ["openai", "tts", "text-to-speech", "whisper", "gpt"]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
debabelizer-core = { path = "../../debabelizer-core" }

# Core dependencies
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client
reqwest = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
wiremock = "0.6"