[package]
name = "debabelizer-soniox"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/debabelizer-soniox"
description = "Soniox STT provider for Debabelizer"

[dependencies]
debabelizer-core = { path = "../../debabelizer-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tracing-subscriber = "0.3"

[[example]]
name = "test_streaming"
required-features = []

[[example]]
name = "test_single_chunk"
required-features = []

